<resources>
    <string name="app_name">Rifa Premiada</string>
    <string name="main_send">Enviar</string>
    <string name="main_Password"> Senha</string>
    <string name="main_user"> Diga o seu email </string>
    <string name="main_user2"> rifapremiada@gmail.com </string>
    <string name="main_titulo"> Rifa Premiada</string>
    <string name="main_Button">Esqueceu a senha?</string>
    <string name="main_Button3">Criar Conta</string>
    <string name="Button4">Minhas rifas</string>
    <string name="Button5">Criar Rifa</string>
    <string name="Button6">Minhas Rifas</string>
    <string name="Button7">Minhas Rifas</string>
    <string name="Button8">Cadastrar</string>
    <string name="Button9">Visualizar</string>
    <string name="Button10">Excluir</string>
    <string name="Button1">Enviar</string>
    <string name="Button11">Enviar</string>
    <string name="titulotelaInicial"> TELA INICIAL</string>
    <string name="titulocriarRifa"> CRIAR RIFA</string>
    <string name="titulominhasRifas"> MINHAS RIFAS</string>
    <string name="nome_cadastro">Nome</string>
    <string name="email_cadastro">Email</string>
    <string name="cpf_cadastro">CPF</string>
    <string name="senha_cadastro">Senha</string>
    <string name="criar_nome_da_rifa">Nome da Rifa</string>
    <string name="criar_rifa_quantidade_de_n_meros">Quantidade de Números</string>
    <string name="criar_rifadata_do_sorteio">Data do Sorteio</string>
    <string name="criar_rifa_premio">Prêmio</string>
    <string name="criar_rifa">Criar Rifa</string>
    <string name="tela_inicial_diga_o_seu_emamil">Diga o seu emamil</string>
    <string name="tela_inicial_senha">Senha</string>
    <string name="tela_inicial_visualizar_rifas">Visualizar Rifas</string>
    <string name="tela_inicial_criar_conta">Criar Conta</string>
    <string name="tela_inicial_login">Login</string>
    <string name="main_esqueceu_senha">Esqueceu a senha ? </string>
    <string name="cadastro_titulo_pt1">Crie sua</string>
    <string name="cadastro_titulo_pt2">conta</string>
    <string name="cadastro_nome">Diga seu nome</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_inserir_email">insira seu Email</string>
    <string name="cadastro_cpf">CPF</string>
    <string name="cadastro_inserir_cpf">insira seu CPF</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_inserir_senha">digite sua Senha</string>
    <string name="cadastro_campo">digite seu nome aqui</string>
    <string name="redefinir_senha_enviar">Enviar</string>
    <string name="redefinir_senha_titulo">Redefina sua senha</string>
    <string name="redefinir_senha_email">Email</string>
    <string name="redefinir_senha_inserir_email">insira seu email</string>
    <string name="minhas_rifas_titulo">Veja suas rifas</string>
    <string name="minhas_rifas_cpf">CPF</string>
    <string name="minhas_rifas_inserir_cpf">000.000.000–00</string>
    <string name="minhas_rifas_titulo3">PREMIADA</string>
    <string name="minhas_rifas_titulo2">RIFA</string>
    <string name="mapa_rifa_titulo">MAPA</string>
    <string name="pos_login">Olá, Seja Bem-Vindo!</string>
    <string name="pos_login2">Veja suas rifas já criadas e crie novas.</string>
    <string name="editar_rifa_nome">Nome</string>
    <string name="editar_rifa_premio">Prêmio</string>
    <string name="editar_rifa_data">Data do sorteio</string>
    <string name="editar_rifa_valor">Valor</string>
    <string name="editar_rifa_qtd">Quantidade de nª</string>
    <string name="editar_rifa_local">Local do sorteio</string>
    <string name="editar_rifa_tema">Tema da rifa</string>
    <string name="minhas_namorados">Rifa dia dos namorados</string>
    <string name="minhas_perfume">Rifa Perfume</string>
    <string name="minhas_titulo">Minhas rifas</string>
    <string name="rifa_assinada">Rifa Assinada</string>
    <string name="enviar11">Enviar</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_confUser">Configuração</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="titlePerfil"> Perfil</string>
    <string name="insiraseunome"> Insira seu nome aqui</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>