<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarRifa">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNomeRifa"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/criar_nome_da_rifa"
                android:inputType="text" />


            <EditText
                android:id="@+id/editTextDataSorteio"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/criar_rifadata_do_sorteio"
                android:inputType="date"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextPremio"
                android:layout_width="399dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/criar_rifa_premio"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonCriarRifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/criar_rifa"
                android:layout_marginLeft="140dp"
                android:onClick="minhasrifas2"/>

        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>